test-models/src/main/pegasus/com/datahub/test/invalid/NonSingularSearchScoreField.pdl
namespace com.datahub.test.invalid

@Aspect = {
  "name": "invalidAspect"
}
record NonSingularSearchScoreField {
  @SearchScore = {}
  scoreArray: array[int]
}